--- a/Subscription - all forms/03 Subscription - buy AND 03 Subscription -pay-new.html
+++ b/Subscription - all forms/03 Subscription - buy AND 03 Subscription -pay-new.html
@@ -501,7 +501,7 @@
           <div classs="wide-box">
             <div class="arrows__wrap">
               <div class="arrows_item">
-                <div class="arrows_item_left">
+                <a href="#" class="arrows_item_left">
                   <svg
                     width="24"
                     height="24"
@@ -518,12 +518,14 @@
                       stroke-linejoin="round"
                     />
                   </svg>
-                  <div class="arrows__header">ВХОД ИЛИ РЕГИСТРАЦИЯ</div>
-                </div>
+                  <div class="arrows__header">
+                    ВХОД ИЛИ РЕГИСТРАЦИЯ
+                  </div>
+                </a>
                 <span class="arrows_line"></span>
               </div>
               <div class="arrows_item">
-                <div class="arrows_item_left">
+                <a href="#" class="arrows_item_left">
                   <svg
                     width="24"
                     height="24"
@@ -541,11 +543,11 @@
                     />
                   </svg>
                   <div class="arrows__header">ВЫБОР ПОДПИСКИ</div>
-                </div>
+                </a>
                 <span class="arrows_line"></span>
               </div>
               <div class="arrows_item">
-                <div class="arrows_item_left">
+                <a href="#" class="arrows_item_left">
                   <svg
                     width="24"
                     height="24"
@@ -561,11 +563,11 @@
                     />
                   </svg>
                   <div class="arrows__header">ОПЛАТА</div>
-                </div>
+                </a>
                 <span class="arrows_line"></span>
               </div>
               <div class="arrows_item">
-                <div class="arrows_item_left">
+                <a href="#" class="arrows_item_left">
                   <svg
                     width="24"
                     height="24"
@@ -583,7 +585,7 @@
                     />
                   </svg>
                   <div class="arrows__header">ПОДТВЕРЖДЕНИЕ</div>
-                </div>
+                </a>
               </div>
             </div>
             <h1 class="post-title no-margin">Купить подписку</h1>
