--- a/Subscription - all forms/02 Subscription - plan + info - gift.html
+++ b/Subscription - all forms/02 Subscription - plan + info - gift.html
@@ -43,6 +43,7 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap/bootstrap-grid.min.css">
     <link rel="stylesheet" type="text/css" href="../css/magnific.min.css">
     <link rel="stylesheet" type="text/css" href="../css/custom2.css">
+    <link rel="stylesheet" type="text/css" href="../css/custom-new.css">
     <style type="text/css">
 /*<![CDATA[*/
 .post-body{background-color: #949987 !important}
