--- a/Subscription - all forms/02 Subscription - plan + info - gift.html
+++ b/Subscription - all forms/02 Subscription - plan + info - gift.html
@@ -33,7 +33,8 @@
     >
     <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/ulej-tips-styles.css?v=1676300078">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Roboto+Condensed:400,400i,700,700i&amp;subset=cyrillic&amp;display=swap">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Spectral:wght@500;700&amp;display=swap">
+    <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Spectral:wght@500;700&amp;display=swap"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/vendor.css?v=1676300069">
     <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/style.css?v=1701529028">
     <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/select2.css?v=1676300069">
