post styles faves stars

--- a/post.html
+++ b/post.html
@@ -311,6 +311,19 @@
         <div class="b-news__short__list">
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/uzbekistan">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/5b1e5c96afc34-620.jpg" alt="" title="">
               </div>
@@ -328,6 +341,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/9-prichin-bonn">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/5c18cd886aef8-620.jpg" alt="" title="">
               </div>
@@ -345,6 +371,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/hallstatt-sights">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/636b6841638f3-Tizer.jpg" alt="" title="">
               </div>
@@ -362,6 +401,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/romantic-praha">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/5a828662a90ee-Untitled-1.jpg" alt="" title="">
               </div>
@@ -379,6 +431,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/wes-anderson-inspired-airbnb-stays">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/648c5adf6e712-tiz.jpg" alt="" title="">
               </div>
@@ -396,6 +461,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/directions-autumn">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/59a6d4ca6483c-620.jpg" alt="" title="">
               </div>
@@ -418,6 +496,19 @@
         <div class="b-news__short__list">
           <div class="b-news__short__block b-news__short__big b-col__2">
             <a href="https://34t.farbatest.com/post/events-august-2024">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <img src="https://34travel.me/media/posts/66aa1652ae1b1-Tizer.jpg" alt="Большая афиша европейских событий августа (обновляется)">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
@@ -433,6 +524,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/moletai">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/66a246e9a9e9f-Tizer.jpg" alt="" title="">
               </div>
@@ -451,6 +555,19 @@
           </div>
           <div class="b-news__short__block b-news__short__big b-col__2">
             <a href="https://34t.farbatest.com/post/shanghai">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <img src="https://34travel.me/media/posts/66a8bb204aaee-tizer-guide-2.jpg" alt="Шанхай">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
@@ -467,6 +584,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/gotobelarus/post/kontrovie">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/66978f08d5f2b-Tizer.jpg" alt="" title="">
               </div>
@@ -485,6 +615,19 @@
           </div>
           <div class="b-news__short__block b-news__short__big b-col__2">
             <a href="https://34t.farbatest.com/post/last-call-august-2024">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <img src="https://34travel.me/media/posts/6694f2cc41b54-Tizer.jpg" alt="Last call: Куда дешево слетать в августе?">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
@@ -499,6 +642,19 @@
           </div>
           <div class="b-news__short__block b-col__1">
             <a href="https://34t.farbatest.com/post/around-warsaw-2">
+              <div class="b-news__short__faves">
+                <div data-href="#form_add_post_view" data-post_id="10872" class="popup-with-form_faves addPostViewToFaves">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M8.28791 11.5771L8 11.3744L7.71209 11.5771L3.50939 14.5371L5.07562 9.64909L5.1853 9.30682L4.89581 9.0938L0.795615 6.0767H5.86987H6.22929L6.34381 5.73601L7.99991 0.809091L9.65601 5.73601L9.77053 6.0767H10.13H15.2044L11.1042 9.09398L10.8147 9.307L10.9244 9.64925L12.4903 14.5369L8.28791 11.5771ZM0.441238 5.81594C0.44126 5.81595 0.441282 5.81597 0.441304 5.81599L0.441238 5.81594ZM15.5588 5.81594L15.5585 5.81615C15.5586 5.81606 15.5587 5.81598 15.5588 5.8159L15.5588 5.81594ZM7.86295 0.401618C7.86292 0.401551 7.8629 0.401483 7.86288 0.401416L7.86295 0.401618Z" stroke="black"></path>
+                  </svg>
+                </div>
+              </div>
               <div class="b-news__short__image">
                 <img src="https://34travel.me/media/posts/668fa199e2f1c-Tizer.jpg" alt="" title="">
               </div>
