--- a/Subscription - all forms/05 Subscription - as-a-gift.html
+++ b/Subscription - all forms/05 Subscription - as-a-gift.html
@@ -29,17 +29,17 @@
       title="34travel.me"
       rel="alternate"
       type="application/rss+xml"
-      href="https://34travel.me/feed"
+      href="https://34t.farbatest.com/feed"
     >
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/ulej-tips-styles.css?v=1676300078">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/ulej-tips-styles.css?v=1676300078">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Roboto+Condensed:400,400i,700,700i&amp;subset=cyrillic&amp;display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Spectral:wght@500;700&amp;display=swap">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/vendor.css?v=1676300069">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/style.css?v=1701529028">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/select2.css?v=1676300069">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/main.css?v=1687869114">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/slick.css?v=1676300069">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/custom.css?v=1696596981">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/vendor.css?v=1676300069">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/style.css?v=1701529028">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/select2.css?v=1676300069">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/main.css?v=1687869114">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/slick.css?v=1676300069">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/custom.css?v=1696596981">
   </head>
   <body>
     <link rel="stylesheet" type="text/css" href="../css/jquery-ui.css">
@@ -56,10 +56,10 @@
     <meta name="twitter:site" content="@34travelby">
     <meta name="twitter:title" content="Как проехать Европу на поездах? Все о проездном Eurail Pass">
     <meta name="twitter:description" content="Большой и аутентичный евротрип всего в одном клике.">
-    <meta name="twitter:image" content="https://34travel.me/media/posts/667047482d329-1-og-travel-2022-material.jpg">
-    <meta property="og:image" content="https://34travel.me/media/posts/667047482d329-1-og-travel-2022-material.jpg">
+    <meta name="twitter:image" content="https://34t.farbatest.com/media/posts/667047482d329-1-og-travel-2022-material.jpg">
+    <meta property="og:image" content="https://34t.farbatest.com/media/posts/667047482d329-1-og-travel-2022-material.jpg">
     <meta property="og:title" content="Как проехать Европу на поездах? Все о проездном Eurail Pass">
-    <meta property="og:url" content="https://34travel.me/post/eurail-pass">
+    <meta property="og:url" content="https://34t.farbatest.com/post/eurail-pass">
     <meta property="og:description" content="Большой и аутентичный евротрип всего в одном клике.">
     <meta property="fb:app_id" content="386369345035266">
     <meta name="yandex-verification" content="657b9f0cf4971340">
@@ -91,7 +91,7 @@
                 <div class="header__projects">
                   <div class="header__projects_header">спецпроекты:</div>
                   <div class="header__projects_wrap flex__wrap">
-                    <a href="https://34travel.me/special/audioguides" class="header__projects_link flex__wrap  header__link">
+                    <a href="https://34t.farbatest.com/special/audioguides" class="header__projects_link flex__wrap  header__link">
                       <svg
                         width="24"
                         height="18"
@@ -107,7 +107,7 @@
                       </svg>
                       Подкаст
                     </a>
-                    <a href="https://34travel.me/special/audioguides" class="header__projects_link flex__wrap  header__link">
+                    <a href="https://34t.farbatest.com/special/audioguides" class="header__projects_link flex__wrap  header__link">
                       <svg
                         width="17"
                         height="23"
@@ -399,7 +399,7 @@
               <div class="header__projects header__section">
                 <div class="header__projects_header">спецпроекты:</div>
                 <div class="header__projects_wrap flex__wrap">
-                  <a href="https://34travel.me/special/audioguides" class="header__projects_link flex__wrap  header__link">
+                  <a href="https://34t.farbatest.com/special/audioguides" class="header__projects_link flex__wrap  header__link">
                     <svg
                       width="24"
                       height="18"
@@ -415,7 +415,7 @@
                     </svg>
                     Подкаст
                   </a>
-                  <a href="https://34travel.me/special/audioguides" class="header__projects_link flex__wrap  header__link">
+                  <a href="https://34t.farbatest.com/special/audioguides" class="header__projects_link flex__wrap  header__link">
                     <svg
                       width="17"
                       height="23"
@@ -861,7 +861,7 @@
               </p>
               <ul class="footer__menu">
                 <li>
-                  <a href="https://34travel.me/gotobelarus">
+                  <a href="https://34t.farbatest.com/gotobelarus">
                     GO TO BELARUS!
                   </a>
                 </li>
@@ -974,16 +974,16 @@ _tmr.push({id: "3122769", type: "pageView", start: (new Date()).getTime()});
         </div>
       </noscript>
       <!-- //Rating@Mail.ru counter -->
-      <script type="text/javascript" src="https://34travel.me/assets/787a1313/jquery-2.2.4.min.js"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/comment.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/social-likes.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/modernizr-custom.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/imagesloaded.pkgd.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/jquery.maskedinput.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/select2.full.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/slick.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/fastclick.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34travel.me/themes/travel/js/main.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/assets/787a1313/jquery-2.2.4.min.js"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/comment.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/social-likes.min.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/modernizr-custom.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/imagesloaded.pkgd.min.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/jquery.maskedinput.min.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/select2.full.min.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/slick.min.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/fastclick.min.js?v=1676300069"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/main.js?v=1676300069"></script>
       <script type="text/javascript" src="../js/bootstrap/bootstrap.min.js"></script>
       <script type="text/javascript" src="../js/magnific.min.js?v=1676300069"></script>
       <script type="text/javascript" src="../js/cookies.min.js"></script>
